# lenia_gpu

./: Cargo.toml  README.md
data/0/layer/: 0.toml
src/: bbs.rs  lenia.rs  lib.rs  logger.rs  misc.rs
