[package]
name = "lenia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayfire = { version = "^3.8", features = ["afserde"] }

# macroquad = "^0.4"
# egui-macroquad = "^0.15"
eframe = { version = "^0.31", features = ["default","__screenshot",] }
egui_extras = { version = "^0.31", features = ["default", "image", "svg"] }
env_logger = { version = "^0.10", features = ["auto-color", "humantime",] }

serde = { version = "^1.0", features = ["derive"] }
toml = "^0.8"
bincode = "^1.3.3"
unique_id = "^0.1"
itertools = "^0.14"

[[bin]]
 name = "compute"
 path = "src/bin/compute.rs"
[[bin]]
 name = "ui"
 path = "src/bin/ui.rs"
